--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GOOGLE_API_KEY="AIzaSyAisUoMJ1iJEZEd0mpr8AwLIz9H_o0Cvdw"
+GOOGLE_API_KEY="key-here"
 
-TWELVELABS_API_KEY="tlk_02W3CNB0260KTK2H6MSM11WNE1NK"
+TWELVELABS_API_KEY="key-here"
